make utils a singleton